# back-end/src/routes/index.ts
@@ -1,5 +1,6 @@
 import { IRoute } from "@infra"
-import { createAboutMe } from "./about-me"
+import { createAboutMe, getAboutMe } from "./about-me"
+import { createNewProject } from "./projects"
 
 const index = "/"
 
@@ -8,9 +9,24 @@ const AllRoutes: Array<IRoute> = [
     path: "/about-me",
     childs: [
       {
+        type: "get",
+        path: index,
+        route: getAboutMe,
+      },
+      {
         type: "post",
         path: "/craete-about-me",
         route: createAboutMe,
+      },
+    ],
+  },
+  {
+    path: "/projects",
+    childs: [
+      {
+        type: "post",
+        path: "/create-project",
+        route: createNewProject,
       },
     ],
   },
